Started code cleanup in the Tag Manager. Fixed new tags starting at 0, and gave editable tags the correct highlight colouring. Repaired the drag-drop sync issue. Added clicking groups to select all tags within.

--- a/NanaManager/NanaManager.csproj
+++ b/NanaManager/NanaManager.csproj
@@ -137,6 +137,9 @@
     <Compile Include="SettingsPages\Languages.xaml.cs">
       <DependentUpon>Languages.xaml</DependentUpon>
     </Compile>
+    <Compile Include="SettingsPages\TagSettings.xaml.cs">
+      <DependentUpon>TagSettings.xaml</DependentUpon>
+    </Compile>
     <Compile Include="SettingsPages\ThemesAndColours.xaml.cs">
       <DependentUpon>ThemesAndColours.xaml</DependentUpon>
     </Compile>
@@ -166,6 +169,10 @@
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="SettingsPages\Languages.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="SettingsPages\TagSettings.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
