Read edits for details. I forgot what's been done

--- a/NanaManagerAPI/NanaManagerAPI.csproj
+++ b/NanaManagerAPI/NanaManagerAPI.csproj
@@ -59,6 +59,11 @@
     <Compile Include="EventArgs\TagCheckEventArgs.cs" />
     <Compile Include="IO\ContentFile.cs" />
     <Compile Include="Logging.cs" />
+    <Compile Include="Properties\Resources.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Resources.resx</DependentUpon>
+    </Compile>
     <Compile Include="Types\Audio.cs" />
     <Compile Include="UI\Controls\TagSelector.xaml.cs">
       <DependentUpon>TagSelector.xaml</DependentUpon>
@@ -87,6 +92,15 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Properties\Resources.resx">
+      <Generator>ResXFileCodeGenerator</Generator>
+      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Resources\Music Icon.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
