Fixed UI, added icon to loader

--- a/NanaManager/NanaManager.csproj
+++ b/NanaManager/NanaManager.csproj
@@ -40,7 +40,11 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup>
-    <StartupObject>NanaManager.App</StartupObject>
+    <StartupObject>
+    </StartupObject>
+  </PropertyGroup>
+  <PropertyGroup>
+    <ApplicationIcon>Nana Manager Icon.ico</ApplicationIcon>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="DotNetZip, Version=1.13.8.0, Culture=neutral, PublicKeyToken=6583c7c814667745, processorArchitecture=MSIL">
@@ -266,6 +270,7 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
+    <Resource Include="Nana Manager Icon.ico" />
     <Content Include="Resources\MenuBars.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
