--- a/NanaManager/NanaManager.csproj
+++ b/NanaManager/NanaManager.csproj
@@ -77,6 +77,7 @@
     <Compile Include="API Components\MediaHandlers\Images.cs" />
     <Compile Include="API Components\FileEncoders\BaseEncoder1_1.cs" />
     <Compile Include="API Components\MediaHandlers\Video.cs" />
+    <Compile Include="GlobalSuppressions.cs" />
     <Compile Include="Pages\AudioViewer.xaml.cs">
       <DependentUpon>AudioViewer.xaml</DependentUpon>
     </Compile>
